# keystone-trusted-channel

./: .gitignore  CMakeLists.txt  README.md  quick-start.sh  riscv-toolchain.cmake  source.sh
docs/: commands.txt  gen_cert_ca.c
enclave-Alice/: CMakeLists.txt  app.lds  printf.c  printf.h
enclave-Alice/eapp/: custom_lib.c  custom_lib.h  eapp.c  eapp_crt.c  eapp_crt.h  eapp_net.c  eapp_net.h  hello.c  printf.c  printf.h  time.c  time.h
enclave-Alice/host/: crt.cpp  crt.h  host.cpp  net.cpp  net.h
my_mbedtls/: custom_asn1.c  custom_attester.c  custom_ed25519.c  custom_md.c  custom_pk.c  custom_string.c  custom_x509.c  custom_x509_crt.c  custom_x509_csr.c
my_mbedtls/include/: custom_asn1.h  custom_functions.h  custom_utils.h  custom_x509.h  enclave_reference_value.h  enclave_reference_values.h  sm_reference_value.h  sm_reference_values.h
my_mbedtls_stdlib/: custom_asn1.c  custom_attester.c  custom_ed25519.c  custom_pk.c  custom_utils.c  custom_x509.c  custom_x509_crt.c  custom_x509_csr.c
my_mbedtls_stdlib/include/: custom_functions.h  custom_oid.h  custom_string.h  custom_utils.h  custom_utils_2.h  enclave_reference_value.h  sm_reference_value.h
patches/: mbedtls_eapp.patch  mbedtls_host.patch
scripts/: build_mbedtls.sh  create_patches.sh  get_attestation.sh  update_reference_values.sh
server-CA/: CMakeLists.txt  certs.c  custom_certs.c  custom_certs.h
server-CA/host/: host.c  net.h
server-verifier/: CMakeLists.txt  custom_certs.h
server-verifier/host/: host.c  net.h
trusted_app/: CMakeLists.txt  certs.c  cm_final.txt  custom_certs.c
trusted_app/eapp/: eapp_crt.c  eapp_crt.h  eapp_net.c  hello.c
trusted_app/host/: host.cpp  net.cpp
